# video-live-ai

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  APPLY_GROQ_GEMINI_ONLY.bat  BACKUP_CHECKLIST.md  CLEAN_AND_RESTART.bat  COMPLETE_SETUP_GUIDE.md  CONDA_VS_UV_CLEANUP.md  DEBUG_CLEAN_CODE.bat  Dockerfile  LIVETALKING_QUICKSTART.md  MODEL_COMPARISON.md  PROJECT_SUMMARY.md  README.md  SCRIPTS_README.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  START_HERE.txt  TROUBLESHOOTING_SETUP.md  TROUBLESHOOTING_UV.md  UV_VS_CONDA_GUIDE.md  VSCODE_REFRESH_INSTRUCTIONS.md  ai-live-commerce.service  check_and_clean_conda.bat  check_tables.py  clean_and_setup_uv.bat  clear_and_restart.bat  diagnose_setup.bat  docker-compose.yml  fix_and_setup_uv.bat  install_full_dependencies.bat  install_livetalking_deps.bat  output.txt  prometheus.yml  pyproject.toml  quick_setup.bat  restart_dashboard.bat  run_authentic.py  (+15 more)
.claude/: settings.local.json
.playwright-cli/: page-2026-03-10T01-07-14-513Z.yml  page-2026-03-10T17-21-14-920Z.yml  page-2026-03-10T17-24-41-311Z.yml  page-2026-03-10T17-24-53-869Z.yml  page-2026-03-10T17-25-19-276Z.yml  page-2026-03-10T17-25-42-364Z.yml  page-2026-03-10T17-26-14-294Z.yml  page-2026-03-10T17-26-32-939Z.yml
colab/: README.md
config/: config.yaml
data/: .gitkeep  products.json  validation_history.json
docs/: CARA_TEST_SEKARANG.md  INDONESIAN_UI_UPDATE.md  LLM_CONFIGURATION.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  architecture.md  changelogs.md  contributing.md  dashboard-authentication.md  security.md  task_status.md  workflow.md
scripts/: FIX_MONITOR.bat  RESTART_GUIDE.md  START_HERE.txt  _check_config.py  _llm_test.py  backup.sh  check_imports.py  check_real_mode_readiness.py  deep_clean.ps1  load_sample_data.py  manage.py  menu.bat  quick_restart.bat  remote_run.sh  remote_sync.sh  restart_and_test.ps1  restore.sh  setup_ffmpeg.py  setup_fish_speech.py  setup_livetalking.py  setup_musetalk_assets.py  smoke_livetalking.py  test-s2-indonesia.py  test_authentic_flow.py  test_monitor_api.py  test_performance.bat  test_voice_ui_integration.py  upgrade-to-s2.ps1  upgrade-to-s2.sh  validate.bat  verify_pipeline.py
src/: __init__.py  main.py
tests/: conftest.py  run_pytest.bat  run_pytest.py  test_api.py  test_asset_setup.py  test_brain.py  test_chutes.py  test_config.py  test_control_plane.py  test_dashboard.py  test_dashboard_training_integration.py  test_engine_resolver.py  test_entrypoints.py  test_fish_speech_client.py  test_fish_speech_dataset_validation.py  test_fish_speech_engine_initialization.py  test_fish_speech_setup.py  test_fish_speech_startup_integration.py  test_fish_speech_status_reporting.py  test_fish_speech_training_dataset_prep.py  test_fish_speech_training_runner.py  test_hardening.py  test_indonesian_voice_accent_bugfix.py  test_indonesian_voice_accent_preservation.py  test_layers.py  test_livetalking_integration.py  test_main.py  test_manage_cli.py  test_menu_batch.py  test_mock_mode.py  test_musetalk_asset_setup.py  (+8 more)
(+297 files in other folders)
